--- a/about.html
+++ b/about.html
@@ -3,19 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
+  <title>About Us | CODESCAPE</title>
 </head>
 <body>
-  <header>
-    <!-- Navigation -->
-  </header>
 
-  <main>
-    <!-- Page Content -->
-  </main>
+<header>
+  <h1>CODESCAPE</h1>
+</header>
 
-  <footer>
-    <!-- Footer -->
-  </footer>
+<main>
+  <section>
+    <h2>About CODESCAPE</h2>
+    <p>
+      CODESCAPE is an engineering-first technology partner focused on building
+      scalable, reliable, and high-performance digital solutions.
+    </p>
+  </section>
+
+  <section>
+    <h3>Our Mission</h3>
+    <p>
+      To deliver value through innovation, technological excellence, and quality,
+      ensuring every CODESCAPE solution is impactful and reliable.
+    </p>
+
+    <h3>Our Vision</h3>
+    <p>
+      To be a trusted technology partner recognized for innovation,
+      engineering precision, and long-term excellence.
+    </p>
+  </section>
+
+  <section>
+    <h3>Engineering Philosophy</h3>
+    <p>
+      We prioritize clean architecture, performance optimization, and
+      future-ready systems that scale with business growth.
+    </p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2026 CODESCAPE</p>
+</footer>
+
 </body>
 </html>
