--- a/about.html
+++ b/about.html
@@ -23,8 +23,10 @@
   <section>
     <h3>Our Mission</h3>
     <p>
-      To deliver value through innovation, technological excellence, and quality,
-      ensuring every CODESCAPE solution is impactful and reliable.
+      CODESCAPE is an engineering-first technology partner. Our mission is simple: 
+"To deliver value through innovation, technological excellence and quality, ensuring every 
+CODESCAPE solution is reliable, scalable, and impactful.
+<b>in short Your Success is our Mission </b>
     </p>
 
     <h3>Our Vision</h3>
@@ -49,3 +51,4 @@
 
 </body>
 </html>
+
