--- a/about.html
+++ b/about.html
@@ -23,10 +23,8 @@
   <section>
     <h3>Our Mission</h3>
     <p>
-      CODESCAPE is an engineering-first technology partner. Our mission is simple: 
-"To deliver value through innovation, technological excellence and quality, ensuring every 
-CODESCAPE solution is reliable, scalable, and impactful.
-<b>in short Your Success is our Mission </b>
+      To deliver value through innovation, technological excellence, and quality,
+      ensuring every CODESCAPE solution is impactful and reliable.
     </p>
 
     <h3>Our Vision</h3>
@@ -51,4 +49,3 @@ CODESCAPE solution is reliable, scalable, and impactful.
 
 </body>
 </html>
-
