Revamp careers.html with new content and structure
Updated the careers page to include sections for open positions and company culture.

--- a/careers.html
+++ b/careers.html
@@ -3,19 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
+  <title>Careers | CODESCAPE</title>
 </head>
 <body>
-  <header>
-    <!-- Navigation -->
-  </header>
 
-  <main>
-    <!-- Page Content -->
-  </main>
+<header>
+  <h1>CODESCAPE</h1>
+</header>
 
-  <footer>
-    <!-- Footer -->
-  </footer>
+<main>
+  <section>
+    <h2>Careers at CODESCAPE</h2>
+    <p>
+      Join a team that values engineering excellence, innovation,
+      and continuous learning.
+    </p>
+  </section>
+
+  <section>
+    <h3>Open Positions</h3>
+
+    <article>
+      <h4>Frontend Developer</h4>
+      <p>Experience with HTML, CSS, JavaScript</p>
+    </article>
+
+    <article>
+      <h4>Backend Developer</h4>
+      <p>Experience with APIs, databases, and scalable systems</p>
+    </article>
+  </section>
+
+  <section>
+    <h3>Why Work With Us?</h3>
+    <p>
+      Collaborative culture, challenging projects, and opportunities
+      to work on cutting-edge technologies.
+    </p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2026 CODESCAPE</p>
+</footer>
+
 </body>
 </html>
