--- a/blog.html
+++ b/blog.html
@@ -3,19 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
+  <title>Blog | CODESCAPE</title>
 </head>
 <body>
-  <header>
-    <!-- Navigation -->
-  </header>
 
-  <main>
-    <!-- Page Content -->
-  </main>
+<header>
+  <h1>CODESCAPE</h1>
+</header>
 
-  <footer>
-    <!-- Footer -->
-  </footer>
+<main>
+  <section>
+    <h2>Insights & Articles</h2>
+
+    <article>
+      <h3>Building Scalable Web Applications</h3>
+      <p>Best practices for performance-driven systems.</p>
+    </article>
+
+    <article>
+      <h3>Why Engineering-First Matters</h3>
+      <p>How strong engineering improves long-term success.</p>
+    </article>
+  </section>
+</main>
+
+<footer>
+  <p>© 2026 CODESCAPE</p>
+</footer>
+
 </body>
 </html>
