Create contact page with form and header
Added a contact form with fields for name, email, and message.

--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
+  <title>Contact | CODESCAPE</title>
 </head>
 <body>
-  <header>
-    <!-- Navigation -->
-  </header>
 
-  <main>
-    <!-- Page Content -->
-  </main>
+<header>
+  <h1>CODESCAPE</h1>
+</header>
 
-  <footer>
-    <!-- Footer -->
-  </footer>
+<main>
+  <section>
+    <h2>Contact Us</h2>
+
+    <form>
+      <label>Name</label><br />
+      <input type="text" /><br /><br />
+
+      <label>Email</label><br />
+      <input type="email" /><br /><br />
+
+      <label>Message</label><br />
+      <textarea></textarea><br /><br />
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+</main>
+
+<footer>
+  <p>© 2026 CODESCAPE</p>
+</footer>
+
 </body>
 </html>
