--- a/privacy.html
+++ b/privacy.html
@@ -1,21 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
-</head>
-<body>
-  <header>
-    <!-- Navigation -->
-  </header>
-
-  <main>
-    <!-- Page Content -->
-  </main>
-
-  <footer>
-    <!-- Footer -->
-  </footer>
-</body>
-</html>
+<h2>Privacy Policy</h2>
+<p>We respect your privacy and protect your data.</p>
