Add Terms & Conditions section to terms.html
Added terms and conditions section to the HTML file.

--- a/terms.html
+++ b/terms.html
@@ -1,21 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
-</head>
-<body>
-  <header>
-    <!-- Navigation -->
-  </header>
-
-  <main>
-    <!-- Page Content -->
-  </main>
-
-  <footer>
-    <!-- Footer -->
-  </footer>
-</body>
-</html>
+<h2>Terms & Conditions</h2>
+<p>Usage of this website is subject to standard terms.</p>
