--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 
     <h3>Our Vision</h3>
     <p>
-      To be a trusted technology partner recognized for innovation,
-      engineering precision, and long-term excellence.
+  To be a leading and trusted technology partner, recognized for innovation, quality, and 
+an enduring passion for excellence
     </p>
   </section>
 
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
