--- a/careers.html
+++ b/careers.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="src/css/style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Careers | CODESCAPE</title>
@@ -49,3 +50,4 @@
 
 </body>
 </html>
+
