--- a/privacy.html
+++ b/privacy.html
@@ -1,2 +1,28 @@
-<h2>Privacy Policy</h2>
-<p>We respect your privacy and protect your data.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy | CODESCAPE</title>
+  <link rel="stylesheet" href="src/css/style.css">
+</head>
+<body>
+
+<header>
+  <h1>CODESCAPE</h1>
+</header>
+
+<main>
+  <h2>Privacy Policy</h2>
+  <p>
+    We respect your privacy and protect your data. Any information shared
+    through this website is handled responsibly and securely.
+  </p>
+</main>
+
+<footer>
+  <p>© 2026 CODESCAPE</p>
+</footer>
+
+</body>
+</html>
