Add HTML structure to terms.html

--- a/terms.html
+++ b/terms.html
@@ -1,2 +1,28 @@
-<h2>Terms & Conditions</h2>
-<p>Usage of this website is subject to standard terms.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terms & Conditions | CODESCAPE</title>
+  <link rel="stylesheet" href="src/css/style.css">
+</head>
+<body>
+
+<header>
+  <h1>CODESCAPE</h1>
+</header>
+
+<main>
+  <h2>Terms and Conditions</h2>
+  <p>
+    By using this website, you agree to comply with the standard terms
+    and conditions governing its usage.
+  </p>
+</main>
+
+<footer>
+  <p>© 2026 CODESCAPE</p>
+</footer>
+
+</body>
+</html>
