--- a/about.html
+++ b/about.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
-<header>
-  <h1>CODESCAPE</h1>
+<header class="site-header">
+  <div class="logo-container">
+    <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
+    <span class="site-name">CODESCAPE</span>
+  </div>
 </header>
 
 <main>
@@ -50,5 +53,6 @@ an enduring passion for excellence
 
 </body>
 </html>
+
 
 
