--- a/privacy.html
+++ b/privacy.html
@@ -8,9 +8,13 @@
 </head>
 <body>
 
-<header>
-  <h1>CODESCAPE</h1>
+<header class="site-header">
+  <div class="logo-container">
+    <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
+    <span class="site-name">CODESCAPE</span>
+  </div>
 </header>
+
 
 <main>
   <h2>Privacy Policy</h2>
@@ -26,3 +30,4 @@
 
 </body>
 </html>
+
