--- a/index.html
+++ b/index.html
@@ -1,23 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="stylesheet" href="src/css/style.css">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
-</head>
 <body>
-  <header>
-    <!-- Navigation -->
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="logo-container">
+      <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
+      <span class="site-name">CODESCAPE</span>
+    </div>
   </header>
 
+  <!-- MAIN CONTENT -->
   <main>
-    <!-- Page Content -->
+
+    <!-- HERO SECTION -->
+    <section>
+      <h1>Where Creativity Meets Technology</h1>
+      <p>
+        CODESCAPE is an engineering-first technology partner delivering
+        scalable, reliable, and high-performance digital solutions.
+      </p>
+    </section>
+
+    <!-- VALUE PROPOSITION -->
+    <section>
+      <h2>Your Success is Our Mission</h2>
+      <p>
+        We focus on innovation, technical excellence, and quality to build
+        solutions that create long-term impact.
+      </p>
+    </section>
+
+    <!-- SERVICES PREVIEW -->
+    <section>
+      <h2>Our Services</h2>
+      <ul>
+        <li>Web Application Development</li>
+        <li>Mobile App Development</li>
+        <li>Cloud & DevOps Solutions</li>
+        <li>UI / UX Design</li>
+      </ul>
+    </section>
+
+    <!-- CLIENT SHOWCASE -->
+    <section>
+      <h2>Trusted by Clients</h2>
+      <p>Client logos and partnerships will be showcased here.</p>
+    </section>
+
+    <!-- CALL TO ACTION -->
+    <section>
+      <h2>Let’s Build Something Great</h2>
+      <p>
+        Partner with CODESCAPE to transform ideas into
+        reliable digital products.
+      </p>
+    </section>
+
   </main>
 
+  <!-- FOOTER -->
   <footer>
-    <!-- Footer -->
+    <p>© 2026 CODESCAPE. All rights reserved.</p>
   </footer>
-</body>
-</html>
 
+</body>
