--- a/services.html
+++ b/services.html
@@ -7,17 +7,81 @@
   <title>CODESCAPE | Where Creativity Meets Technology</title>
 </head>
 <body>
-  <header>
-    <!-- Navigation -->
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="logo-container">
+      <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
+      <span class="site-name">CODESCAPE</span>
+    </div>
   </header>
 
+  <!-- MAIN CONTENT -->
   <main>
-    <!-- Page Content -->
+
+    <section>
+      <h1>Our Services</h1>
+      <p>
+        CODESCAPE provides engineering-driven digital solutions focused on
+        performance, scalability, and reliability.
+      </p>
+    </section>
+
+    <section>
+      <h2>What We Offer</h2>
+
+      <ul>
+        <li>
+          <h3>
+            <a href="service-web.html">Web Application Development</a>
+          </h3>
+          <p>
+            High-performance, scalable web applications built with modern
+            architectures and best practices.
+          </p>
+        </li>
+
+        <li>
+          <h3>
+            <a href="service-mobile.html">Mobile App Development</a>
+          </h3>
+          <p>
+            Native and cross-platform mobile solutions designed for speed,
+            usability, and reliability.
+          </p>
+        </li>
+
+        <li>
+          <h3>
+            <a href="service-cloud.html">Cloud & DevOps Solutions</a>
+          </h3>
+          <p>
+            Cloud infrastructure, CI/CD pipelines, and DevOps automation
+            ensuring secure and scalable deployments.
+          </p>
+        </li>
+
+        <li>
+          <h3>
+            <a href="service-uiux.html">UI / UX Design</a>
+          </h3>
+          <p>
+            User-centered design focused on usability, accessibility,
+            and clean visual identity.
+          </p>
+        </li>
+      </ul>
+    </section>
+
   </main>
 
+  <!-- FOOTER -->
   <footer>
-    <!-- Footer -->
+    <p>© 2026 CODESCAPE. All rights reserved.</p>
   </footer>
+
 </body>
+
 </html>
+
 
