--- a/about.html
+++ b/about.html
@@ -10,10 +10,11 @@
 
 <header class="site-header">
   <div class="logo-container">
-    <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
-    <span class="site-name">CODESCAPE</span>
+    <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+    <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
   </div>
 </header>
+
 
 <main>
   <section>
@@ -53,6 +54,7 @@ an enduring passion for excellence
 
 </body>
 </html>
+
 
 
 
