--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 
-<header>
-  <h1>CODESCAPE</h1>
+<header class="site-header">
+  <div class="logo-container">
+    <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+    <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+  </div>
 </header>
+
 
 <main>
   <section>
@@ -38,4 +42,5 @@
 
 </body>
 </html>
+
 
