--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="logo-container">
-      <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
-      <span class="site-name">CODESCAPE</span>
+      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
     </div>
   </header>
 
@@ -22,10 +22,10 @@
 
     <!-- VALUE PROPOSITION -->
     <section>
-      <h2>Your Success is Our Mission</h2>
+      <h2>Your Success Is Our Mission</h2>
       <p>
         We focus on innovation, technical excellence, and quality to build
-        solutions that create long-term impact.
+        digital products that create long-term impact.
       </p>
     </section>
 
@@ -33,25 +33,43 @@
     <section>
       <h2>Our Services</h2>
       <ul>
-        <li>Web Application Development</li>
-        <li>Mobile App Development</li>
-        <li>Cloud & DevOps Solutions</li>
-        <li>UI / UX Design</li>
+        <li>
+          <a href="service-web.html">Web Application Development</a>
+        </li>
+        <li>
+          <a href="service-mobile.html">Mobile App Development</a>
+        </li>
+        <li>
+          <a href="service-cloud.html">Cloud & DevOps Solutions</a>
+        </li>
+        <li>
+          <a href="service-uiux.html">UI / UX Design</a>
+        </li>
       </ul>
+
+      <p>
+        <a href="services.html">View all services →</a>
+      </p>
     </section>
 
-    <!-- CLIENT SHOWCASE -->
+    <!-- TRUST SECTION -->
     <section>
-      <h2>Trusted by Clients</h2>
-      <p>Client logos and partnerships will be showcased here.</p>
+      <h2>Trusted Engineering Partner</h2>
+      <p>
+        CODESCAPE works with startups and enterprises to deliver
+        secure, scalable, and future-ready technology solutions.
+      </p>
     </section>
 
     <!-- CALL TO ACTION -->
     <section>
       <h2>Let’s Build Something Great</h2>
       <p>
-        Partner with CODESCAPE to transform ideas into
-        reliable digital products.
+        Partner with CODESCAPE to transform ideas into reliable,
+        high-quality digital products.
+      </p>
+      <p>
+        <a href="contact.html">Contact Us →</a>
       </p>
     </section>
 
