--- a/careers.html
+++ b/careers.html
@@ -1,60 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="src/css/style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Join CODESCAPE and build innovative, scalable technology solutions with an engineering-first team." />
   <title>Careers | CODESCAPE</title>
+
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
 
 <header class="site-header">
-  <div class="logo-container">
-    <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-    <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+  <div class="container header-content">
+    <div class="logo-container">
+      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+    </div>
   </div>
 </header>
 
+<main class="careers-page">
 
-
-<main>
-  <section>
-    <h2>Careers at CODESCAPE</h2>
-    <p>
-      Join a team that values engineering excellence, innovation,
-      and continuous learning.
-    </p>
+  <!-- Hero Section -->
+  <section class="careers-hero">
+    <div class="container">
+      <h1>Build the Future With CODESCAPE</h1>
+      <p>
+        We are an engineering-first technology partner driven by innovation,
+        precision, and long-term impact.
+      </p>
+    </div>
   </section>
 
-  <section>
-    <h3>Open Positions</h3>
+  <!-- Open Positions -->
+  <section class="open-roles">
+    <div class="container">
+      <h2>Open Positions</h2>
 
-    <article>
-      <h4>Frontend Developer</h4>
-      <p>Experience with HTML, CSS, JavaScript</p>
-    </article>
+      <div class="job-card">
+        <h3>Frontend Engineer</h3>
+        <p class="job-meta">Full-time | Remote</p>
+        <p>
+          Build responsive, high-performance user interfaces using modern web technologies.
+        </p>
+        <a href="#" class="apply-btn">Apply Now →</a>
+      </div>
 
-    <article>
-      <h4>Backend Developer</h4>
-      <p>Experience with APIs, databases, and scalable systems</p>
-    </article>
+      <div class="job-card">
+        <h3>Backend Engineer</h3>
+        <p class="job-meta">Full-time | Hybrid</p>
+        <p>
+          Design scalable APIs and architect reliable backend systems.
+        </p>
+        <a href="#" class="apply-btn">Apply Now →</a>
+      </div>
+
+    </div>
   </section>
 
-  <section>
-    <h3>Why Work With Us?</h3>
-    <p>
-      Collaborative culture, challenging projects, and opportunities
-      to work on cutting-edge technologies.
-    </p>
+  <!-- Culture Section -->
+  <section class="culture-section">
+    <div class="container">
+      <h2>Our Culture</h2>
+      <p>
+        At CODESCAPE, engineering excellence is our foundation.
+        We foster collaboration, continuous learning, and a passion
+        for solving complex challenges.
+      </p>
+    </div>
   </section>
+
+  <!-- Hiring Message -->
+  <section class="hiring-message">
+    <div class="container">
+      <h2>Your Success is Our Mission</h2>
+      <p>
+        If you are passionate about innovation and building reliable,
+        scalable solutions that make an impact, we would love to hear from you.
+      </p>
+    </div>
+  </section>
+
 </main>
 
-<footer>
-  <p>© 2026 CODESCAPE</p>
+<footer class="site-footer">
+  <div class="container">
+    <p>© 2026 CODESCAPE. All rights reserved.</p>
+  </div>
 </footer>
 
 </body>
 </html>
-
-
-
