--- a/case-studies.html
+++ b/case-studies.html
@@ -1,23 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="src/css/style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
+  <meta name="description" content="Explore CODESCAPE case studies showcasing scalable, high-performance engineering solutions." />
+  <title>Case Studies | CODESCAPE</title>
+
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
+
 <body>
-  <header>
-    <!-- Navigation -->
-  </header>
 
-  <main>
-    <!-- Page Content -->
-  </main>
+<header class="site-header">
+  <div class="container header-content">
+    <div class="logo-container">
+      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+    </div>
+  </div>
+</header>
 
-  <footer>
-    <!-- Footer -->
-  </footer>
+<main>
+
+  <!-- Hero -->
+  <section class="hero-section">
+    <div class="container">
+      <h1>Engineering Excellence in Action</h1>
+      <p>
+        Explore how CODESCAPE delivers scalable, reliable, and impactful digital solutions.
+      </p>
+    </div>
+  </section>
+
+  <!-- Case Studies -->
+  <section>
+    <div class="container">
+
+      <div class="case-study-card">
+
+        <img src="src/images/project-fintech.jpg" alt="Fintech Dashboard Project" class="case-image">
+
+        <div class="case-content">
+          <h2>FinTech Analytics Platform</h2>
+          <p>
+            Designed and developed a high-performance analytics dashboard
+            capable of processing real-time financial data.
+          </p>
+
+          <ul>
+            <li>⚡ Reduced load time by 45%</li>
+            <li>📈 Improved reporting efficiency</li>
+            <li>🔐 Enterprise-grade security architecture</li>
+          </ul>
+
+          <p><strong>Tech Stack:</strong> React, Node.js, PostgreSQL</p>
+        </div>
+      </div>
+
+      <div class="case-study-card">
+
+        <img src="src/images/project-ecommerce.jpg" alt="E-commerce Platform Project" class="case-image">
+
+        <div class="case-content">
+          <h2>Scalable E-commerce Platform</h2>
+          <p>
+            Built a high-availability e-commerce system optimized for
+            large-scale traffic and seamless checkout experiences.
+          </p>
+
+          <ul>
+            <li>🚀 Handled 100K+ monthly users</li>
+            <li>💳 Secure payment integration</li>
+            <li>📊 Optimized product search performance</li>
+          </ul>
+
+          <p><strong>Tech Stack:</strong> Next.js, MongoDB, AWS</p>
+        </div>
+      </div>
+
+      <div class="case-study-card">
+
+        <img src="src/images/project-saas.jpg" alt="SaaS System Architecture Project" class="case-image">
+
+        <div class="case-content">
+          <h2>Enterprise SaaS Architecture</h2>
+          <p>
+            Engineered a scalable SaaS infrastructure focused on
+            reliability, modular design, and performance optimization.
+          </p>
+
+          <ul>
+            <li>📦 Microservices architecture</li>
+            <li>🔄 Zero-downtime deployment</li>
+            <li>⚙ Optimized backend performance</li>
+          </ul>
+
+          <p><strong>Tech Stack:</strong> Docker, Kubernetes, Node.js</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+</main>
+
+<footer class="site-footer">
+  <div class="container">
+    <p>© 2026 CODESCAPE. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
-
