--- a/services.html
+++ b/services.html
@@ -1,87 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="src/css/style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CODESCAPE | Where Creativity Meets Technology</title>
+  <meta name="description" content="Explore CODESCAPE engineering-driven services including web development, mobile apps, cloud solutions, and UI/UX design." />
+  <title>Services | CODESCAPE</title>
+
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
+
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
+<!-- HEADER -->
+<header class="site-header">
+  <div class="container header-content">
     <div class="logo-container">
-      <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
-      <span class="site-name">CODESCAPE</span>
+      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
     </div>
-  </header>
+  </div>
+</header>
 
-  <!-- MAIN CONTENT -->
-  <main>
+<main>
 
-    <section>
-      <h1>Our Services</h1>
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="container">
+      <h1>Engineering-Driven Digital Solutions</h1>
       <p>
-        CODESCAPE provides engineering-driven digital solutions focused on
-        performance, scalability, and reliability.
+        We deliver scalable, high-performance solutions designed for
+        innovation, reliability, and long-term growth.
       </p>
-    </section>
+    </div>
+  </section>
 
-    <section>
-      <h2>What We Offer</h2>
+  <!-- Services Overview -->
+ <section class="service-section">
+  <div class="container service-wrapper">
+
+    <!-- Left Side Content -->
+    <div class="service-text">
+      <h1>Web Designing & Development</h1>
+      <p>
+        Web designing is more than just creating visually appealing pages.
+        At CODESCAPE, we craft digital experiences engineered for performance,
+        scalability, and long-term growth.
+      </p>
 
       <ul>
-        <li>
-          <h3>
-            <a href="service-web.html">Web Application Development</a>
-          </h3>
-          <p>
-            High-performance, scalable web applications built with modern
-            architectures and best practices.
-          </p>
-        </li>
-
-        <li>
-          <h3>
-            <a href="service-mobile.html">Mobile App Development</a>
-          </h3>
-          <p>
-            Native and cross-platform mobile solutions designed for speed,
-            usability, and reliability.
-          </p>
-        </li>
-
-        <li>
-          <h3>
-            <a href="service-cloud.html">Cloud & DevOps Solutions</a>
-          </h3>
-          <p>
-            Cloud infrastructure, CI/CD pipelines, and DevOps automation
-            ensuring secure and scalable deployments.
-          </p>
-        </li>
-
-        <li>
-          <h3>
-            <a href="service-uiux.html">UI / UX Design</a>
-          </h3>
-          <p>
-            User-centered design focused on usability, accessibility,
-            and clean visual identity.
-          </p>
-        </li>
+        <li>✔ Custom Website Development</li>
+        <li>✔ Responsive & Mobile-First Design</li>
+        <li>✔ High-Performance Architecture</li>
+        <li>✔ SEO-Optimized Structure</li>
+        <li>✔ Secure Backend Integration</li>
       </ul>
-    </section>
 
-  </main>
+      <a href="service-web.html" class="read-more">Explore More →</a>
+    </div>
 
-  <!-- FOOTER -->
-  <footer>
+    <!-- Right Side Image -->
+    <div class="service-image">
+      <img src="src/images/web-development.png" alt="Web Development Illustration">
+    </div>
+
+  </div>
+</section>
+
+</main>
+
+<footer class="site-footer">
+  <div class="container">
     <p>© 2026 CODESCAPE. All rights reserved.</p>
-  </footer>
+  </div>
+</footer>
 
 </body>
-
 </html>
-
-
