--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 
 <header class="site-header">
   <div class="logo-container">
-    <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-    <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+    <img src="logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+    <img src="logo-full.png" alt="CODESCAPE Logo" class="logo-full">
   </div>
 </header>
 
@@ -54,6 +54,7 @@ an enduring passion for excellence
 
 </body>
 </html>
+
 
 
 
