--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,8 @@
 <header class="site-header">
   <div class="container header-content">
     <div class="logo-container">
-      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+      <img src="logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="logo-full.png" alt="CODESCAPE Logo" class="logo-full">
     </div>
 
     <nav class="main-nav">
@@ -105,3 +105,4 @@
 
 </body>
 </html>
+
