--- a/careers.html
+++ b/careers.html
@@ -13,8 +13,8 @@
 <header class="site-header">
   <div class="container header-content">
     <div class="logo-container">
-      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+      <img src="-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="logo-full.png" alt="CODESCAPE Logo" class="logo-full">
     </div>
   </div>
 </header>
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+
