--- a/case-studies.html
+++ b/case-studies.html
@@ -14,8 +14,8 @@
 <header class="site-header">
   <div class="container header-content">
     <div class="logo-container">
-      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+      <img src="logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="logo-full.png" alt="CODESCAPE Logo" class="logo-full">
     </div>
   </div>
 </header>
@@ -38,7 +38,7 @@
 
       <div class="case-study-card">
 
-        <img src="src/images/project-fintech.jpg" alt="Fintech Dashboard Project" class="case-image">
+        <img src="project-fintech.jpg" alt="Fintech Dashboard Project" class="case-image">
 
         <div class="case-content">
           <h2>FinTech Analytics Platform</h2>
@@ -59,7 +59,7 @@
 
       <div class="case-study-card">
 
-        <img src="src/images/project-ecommerce.jpg" alt="E-commerce Platform Project" class="case-image">
+        <img src="project-ecommerce.jpg" alt="E-commerce Platform Project" class="case-image">
 
         <div class="case-content">
           <h2>Scalable E-commerce Platform</h2>
@@ -80,7 +80,7 @@
 
       <div class="case-study-card">
 
-        <img src="src/images/project-saas.jpg" alt="SaaS System Architecture Project" class="case-image">
+        <img src="project-saas.jpg" alt="SaaS System Architecture Project" class="case-image">
 
         <div class="case-content">
           <h2>Enterprise SaaS Architecture</h2>
@@ -112,3 +112,4 @@
 
 </body>
 </html>
+
