--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 
 <header class="site-header">
   <div class="logo-container">
-    <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-    <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+    <img src="logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+    <img src="logo-full.png" alt="CODESCAPE Logo" class="logo-full">
   </div>
 </header>
 
@@ -42,5 +42,6 @@
 
 </body>
 </html>
+
 
 
