--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="logo-container">
-      <img src="src/images/logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
-      <img src="src/images/logo-full.png" alt="CODESCAPE Logo" class="logo-full">
+      <img src="logo-icon.png" alt="CODESCAPE Icon" class="logo-icon">
+      <img src="logo-full.png" alt="CODESCAPE Logo" class="logo-full">
     </div>
   </header>
 
@@ -81,3 +81,4 @@
   </footer>
 
 </body>
+
