--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 
 <header class="site-header">
   <div class="logo-container">
-    <img src="src/images/logo.png" alt="CODESCAPE Logo" class="logo">
+    <img src="logo.png" alt="CODESCAPE Logo" class="logo">
     <span class="site-name">CODESCAPE</span>
   </div>
 </header>
@@ -30,4 +30,5 @@
 
 </body>
 </html>
+
 
